# secretarios-virtuales

./: .env.example  .gitignore  ESTADO_PROYECTO.md  FIXES_AUDITORIA.md  README.md  deploy.sh  install-mac.sh  install.sh  mypy.ini  pyproject.toml  restart-vllm.sh  ruff.toml
.plans/: 2026-04-21-extended-features.md
central/: __main__.py  app.py
central/templates/: dashboard.html
infrastructure/: docker-compose.yml  install-nvidia-proxmox.sh  setup-server.sh
infrastructure/db/: init.sql
infrastructure/profiles/: hardware.json
infrastructure/setup/: __main__.py  detect_hardware.py  generate_config.py
infrastructure/systemd/: backup-db.service  backup-db.timer  calendar-remind.service  install-timers.sh  morning-digest.service  morning-digest.timer  obsidian-sync.service  web-admin.service  weekly-summary.service  weekly-summary.timer
jobs/: morning_digest.py  weekly_summary.py
orchestrator/: __main__.py  admin.py  agent.py  parser.py
scripts/: add-ssh-tunnel.sh  fix-db-and-deploy.sh  fix-tunnel.sh  setup-tunnel.sh
secretary/: __main__.py  agent.py  memory.py
secretary/handlers/: _email_providers.py  audio.py  config_calendar.py  config_email.py  document.py  email.py  location.py  onboarding.py  photo.py  text.py
shared/: crypto.py
shared/audio/: whisper.py
shared/backup/: backup.sh
shared/calendar/: caldav_client.py  client.py  google_client.py  models.py  remind.py
shared/db/: migrate.py  models.py  pool.py  repository.py
shared/email/: client.py  (+1 more)
supervisor/: __main__.py  supervisor.py
web/: __main__.py  app.py  db.py  service.py
(+76 files in other folders)
