[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "secretarios-virtuales"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21.0,<22",
    "asyncpg>=0.29,<1",
    "openai>=1.0,<2",
    "aioimaplib>=2.0,<3",
    "aiosmtplib>=3.0,<4",
    "cryptography>=42.0,<43",
    "redis>=5.0,<6",
    "python-dotenv>=1.0,<2",
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "pypdf>=4.0",
    "asyncssh>=2.14,<3",
    "python-frontmatter>=1.1,<2",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9,<1",
    "caldav>=1.3,<2",
    "google-auth-oauthlib>=1.2,<2",
    "google-api-python-client>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.4,<1",
    "mypy>=1.9,<2",
    "pytest-mock>=3.14,<4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "secretary*", "orchestrator*", "supervisor*", "infrastructure*", "web*"]
exclude = ["infrastructure.data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
